--- a/ProjectsDS/Week3/day4/exercises/python/classes/OOP_practice.ipynb
+++ b/ProjectsDS/Week3/day4/exercises/python/classes/OOP_practice.ipynb
@@ -47,80 +47,18 @@
     "   \n",
     "       - `many_teeth` --> number of teeth gives you a clue of how old the dinosaurs are, that's why it could be interesting to be able to change the number of teeth they have.\n",
     "       - `add_skill` --> this method add skills to each dinosaurs instance. \n",
-    "       - `is_dangerous` --> not all of the dinosaurs are nice, some of them are a little bit dangerous and could attack you, with this method you should be able to change the boolean set. Make sure, using `if`, the argument is always a boolean, if not print something like \"Remember you should give a boolean, True or False?\"\n"
+    "       - `is_dangerous` --> not all of the dinosaurs are nice, some of them are a little bit dangerous and could attacks you, with this method you should be able to change the boolean set. Make sure, using `if`, the argument is always a boolean, if not print something like \"Remember you should give a boolean, True or False?\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "# define a class Dinosaur\n",
     "class Dinosaur():\n",
     "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-40-a8c1e69eb3dd>, line 19)",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-40-a8c1e69eb3dd>\"\u001b[0;36m, line \u001b[0;32m19\u001b[0m\n\u001b[0;31m    Trex = Dinosaur(name=\"Trex\",teeth=40,danger=peligro)\u001b[0m\n\u001b[0m                                                        ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
-     ]
-    }
-   ],
-   "source": [
-    "class Dinosaur:\n",
-    "    \n",
-    "    def __init__(self, name, teeth, skills, danger, head=1, age):\n",
-    "        \"\"\"Constructor de la clase\"\"\"\n",
-    "        self.teeth = dientes\n",
-    "        self.skills = habilidades\n",
-    "        self.danger = bool(peligro)\n",
-    "        self.head = cabeza\n",
-    "        self.age = edad\n",
-    "\n",
-    "    def many_teeth(self, numberofteeth):\n",
-    "        if numberofteeth >= 10:\n",
-    "            self.age += 1\n",
-    "\n",
-    "    def add_skill(self, specialskills):\n",
-    "        if Dinosaur.isinstance:\n",
-    "        \n",
-    "\n",
-    "Trex = Dinosaur(name=\"Trex\",teeth=40,danger=peligro)\n",
-    "print(Trex.nombre)\n",
-    "print(Trex.dientes)\n",
-    "print(Trex)\n",
-    "print(Trex.peligro)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "Be careful\n"
-    }
-   ],
-   "source": [
-    "def is_dangerous(self):\n",
-    "    dangerous = True\n",
-    "    print(\"Be careful\")\n",
-    "\n",
-    "is_dangerous(self=True)\n",
-    "\n"
    ]
   },
   {
@@ -367,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6-final"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
