--- a/ProjectsDS/Week3/precurse_python/3_bucles.ipynb
+++ b/ProjectsDS/Week3/precurse_python/3_bucles.ipynb
@@ -211,6 +211,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "--------------------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## `range` & `enumerate`"
    ]
   },
@@ -685,7 +692,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6-final"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
