--- a/ProjectsDS/Week3/precurse_python/4_comprehension.ipynb
+++ b/ProjectsDS/Week3/precurse_python/4_comprehension.ipynb
@@ -31,15 +31,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "S\nt\nr\ni\nn\ng\n"
+     "output_type": "stream",
+     "text": [
+      "S\n",
+      "t\n",
+      "r\n",
+      "i\n",
+      "n\n",
+      "g\n"
+     ]
     }
    ],
    "source": [
@@ -72,15 +77,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "[1, 2, 3, 4]\n"
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4]\n"
+     ]
     }
    ],
    "source": [
@@ -162,15 +167,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18, 19]\n"
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18, 19]\n"
+     ]
     }
    ],
    "source": [
@@ -232,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,16 +246,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
      },
+     "execution_count": 14,
      "metadata": {},
-     "execution_count": 5
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -259,16 +266,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "{0: 0, 2: 4, 4: 16, 6: 36, 8: 64}"
+      "text/plain": [
+       "{0: 0, 2: 4, 4: 16, 6: 36, 8: 64}"
+      ]
      },
+     "execution_count": 15,
      "metadata": {},
-     "execution_count": 6
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -564,7 +573,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6-final"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
