--- a/ProjectsDS/Week3/day2/theory/Python_X_Precurse.ipynb
+++ b/ProjectsDS/Week3/day2/theory/Python_X_Precurse.ipynb
@@ -4400,7 +4400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -4408,10 +4408,10 @@
      "ename": "TypeError",
      "evalue": "unhashable type: 'list'",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-39-416239ea609e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0md\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: unhashable type: 'list'"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-28-416239ea609e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0md\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: unhashable type: 'list'"
      ]
     }
    ],
@@ -4477,21 +4477,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'x' is not defined",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-40-f83547a7051c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0melem\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0melem\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0melem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'x' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for elem in x:\n",
     "    if type(elem) == dict:\n",
@@ -4532,10 +4520,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 41,
+   "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
@@ -4552,16 +4538,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "5"
+      "text/plain": "1"
      },
      "metadata": {},
-     "execution_count": 41
+     "execution_count": 49
     }
    ],
    "source": [
@@ -5084,7 +5070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -5093,7 +5079,7 @@
       "text/plain": "[-5, -4, -3, -2, -1, 0, 1, 2, 3, 4]"
      },
      "metadata": {},
-     "execution_count": 51
+     "execution_count": 19
     }
    ],
    "source": [
@@ -5103,7 +5089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -5112,7 +5098,7 @@
       "text/plain": "[-5, -4, -3, -2, -1]"
      },
      "metadata": {},
-     "execution_count": 52
+     "execution_count": 30
     }
    ],
    "source": [
@@ -5147,15 +5133,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "<filter object at 0x111d05bd0>\n"
+     "text": "<filter object at 0x00000243DBDB2828>\n"
     }
    ],
    "source": [
@@ -5169,7 +5153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -5178,7 +5162,7 @@
       "text/plain": "[-5, -4, -3, -2, -1]"
      },
      "metadata": {},
-     "execution_count": 54
+     "execution_count": 21
     }
    ],
    "source": [
@@ -5188,10 +5172,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
@@ -5204,12 +5186,12 @@
       "text/plain": "[-5, -4, -3, -2, -1]"
      },
      "metadata": {},
-     "execution_count": 56
+     "execution_count": 26
     }
    ],
    "source": [
     "lista = list(range(-5, 5))\n",
-    "print(lista)\n",
+    "print(l)\n",
     "def check_is_lower_0_filter_v2(x):\n",
     "    return x < 0\n",
     "\n",
@@ -5219,7 +5201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -5228,7 +5210,7 @@
       "text/plain": "[-5, -4, -3, -2, -1]"
      },
      "metadata": {},
-     "execution_count": 57
+     "execution_count": 34
     }
    ],
    "source": [
@@ -5248,10 +5230,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 50,
+   "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
@@ -5376,24 +5356,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'def__init__' is not defined",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-49-f20acc192ef3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mHumano\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mnombre\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0medad\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mnumero_ojos\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-49-f20acc192ef3>\u001b[0m in \u001b[0;36mHumano\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mDNI\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0mdef__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnombre\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnombre\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'def__init__' is not defined"
-     ]
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Ojos chiquito antes de cambiar: 2\nOjos chiquito después de cambiar: 3\nNum ojos broncano: 2\n"
     }
    ],
    "source": [
-    "class Humano():\n",
+    "class Humano:\n",
     "\n",
     "    nombre = None\n",
     "    edad = None\n",
@@ -5401,64 +5374,17 @@
     "    numero_piernas = 2\n",
     "    DNI = None\n",
     "\n",
-    "    def__init__(self):\n",
-    "    self.nombre = nombre\n",
-    "    pass\n",
+    "    def __init__(self):\n",
+    "        \"\"\" Constructor de la clase\"\"\"\n",
+    "        pass\n",
     "\n",
     "chiquito = Humano()\n",
-    "print(chiquito.numero_ojos)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-29-e80ce1d066dd>, line 3)",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-29-e80ce1d066dd>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    def__init__(self, name, age, numero_ojos=2, numero_piernas=2):\u001b[0m\n\u001b[0m                                                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "class Humano:\n",
+    "print(\"Ojos chiquito antes de cambiar:\", chiquito.numero_ojos)\n",
+    "chiquito.numero_ojos = 3\n",
+    "print(\"Ojos chiquito después de cambiar:\", chiquito.numero_ojos)\n",
     "\n",
-    "    def__init__(self, name, age, numero_ojos=2, numero_piernas=2):\n",
-    "        self.nombre = name\n",
-    "        self.edad = age\n",
-    "        \n",
-    "    chiquito = Humano(name=\"Chiquito\", age=78)\n",
-    "    print(chiquito.nombre)\n",
-    "    print(chiquito.edad)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-38-548461682994>, line 3)",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-38-548461682994>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    def__init__(self, name, age):\u001b[0m\n\u001b[0m                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "class Pez:\n",
-    "\n",
-    "    def__init__(self, name, age):\n",
-    "    self.name = nombre\n",
-    "    self.age = edad\n",
-    "\n",
-    "    Dory = Pez(nombre=\"Dory\", edad=3)\n",
-    "    print(Dory.name)\n",
-    "    print(Dory.age)"
+    "broncano = Humano()\n",
+    "print(\"Num ojos broncano:\", broncano.numero_ojos)"
    ]
   },
   {
@@ -5466,7 +5392,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Humano:\n",
+    "\n",
+    "    nombre = None\n",
+    "    edad = None\n",
+    "    numero_ojos = 2\n",
+    "    numero_piernas = 2\n",
+    "    DNI = None\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        \"\"\" Constructor de la clase\"\"\"\n",
+    "        pass"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -5572,7 +5510,7 @@
     "name": "ipython",
     "version": 3
    },
-   "version": "3.7.6-final"
+   "version": "3.6.4-final"
   },
   "orig_nbformat": 2,
   "file_extension": ".py",
