--- a/ProjectsDS/Week3/precurse_python/9_classes.ipynb
+++ b/ProjectsDS/Week3/precurse_python/9_classes.ipynb
@@ -272,15 +272,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "4\nDory\n"
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "Dory\n"
+     ]
     }
    ],
    "source": [
@@ -463,7 +466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6-final"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
