Los primeros Ej

--- a/ProjectsDS/Week3/day5/exercises/rock_paper_scissors.ipynb
+++ b/ProjectsDS/Week3/day5/exercises/rock_paper_scissors.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -21,7 +21,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "player1_choose 1\nplayer2_choose 1\nDraw\n"
+     "text": "Only there are 3 possibilities: [1, 2, 3]\nOnly there are 3 possibilities: [1, 2, 3]\nplayer1_choose: 2\nplayer2_choose: 3\nPlayer 2 wins\n"
     }
    ],
    "source": [
@@ -96,12 +96,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4-final"
+   "version": "3.7.6-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python36464bitc2077ed07ea84d23aa5b518d224882ab",
-   "display_name": "Python 3.6.4 64-bit"
+   "name": "python3",
+   "display_name": "Python 3"
   }
  },
  "nbformat": 4,
