--- a/ProjectsDS/Week3/day3/exercises/Exercises_1-8_v7.ipynb
+++ b/ProjectsDS/Week3/day3/exercises/Exercises_1-8_v7.ipynb
@@ -993,16 +993,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "[15, 'Recoletos', False, None, [15, 'Recoletos'], '5']"
-     },
-     "metadata": {},
-     "execution_count": 12
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'lista_informacion' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-03c236d34491>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlista_informacion\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'lista_informacion' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1029,9 +1032,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "invalid character in identifier (<ipython-input-2-0be006947fc6>, line 6)",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-0be006947fc6>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    ​\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid character in identifier\n"
+     ]
+    }
+   ],
    "source": [
     "def elemento(lista):\n",
     "    for elem in lista:\n",
@@ -3832,7 +3844,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4-final"
+   "version": "3.7.6-final"
   },
   "mimetype": "text/x-python",
   "name": "python",
