--- a/ProjectsDS/Week3/test/Precurse_Exam.ipynb
+++ b/ProjectsDS/Week3/test/Precurse_Exam.ipynb
@@ -35,27 +35,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'fhsdkf' is not defined",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-28bc438bf6c8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfhsdkf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'fhsdkf' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "print(fhsdkf)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -66,11 +45,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Respuesta ejercicio 2"
+    "# Respuesta ejercicio 2\n",
+    "\n",
+    "def get_inputs():\n",
+    "    palabra = input(\"Ingresa una palabra:\")\n",
+    "    numero = int(input(\"Ingresa un nro que no supere la cantidad de letras en tu palabra elegida\"))\n",
+    "    if (numero > len(palabra)):\n",
+    "        print(\"El numero NO DEBE SER MAYOR QUE LA CANTIDAD DE LETRAS DE TU PALABRA\")\n",
+    "        numero, palabra = get_inputs()\n",
+    "        return numero, palabra    \n",
+    "    else:\n",
+    "        return get_inputs()\n",
+    "\n",
+    "def n_grama (p, n)\n",
+    "    for x in range(len(p)):\n",
+    "        \n",
+    "\n",
+    "\n",
+    "\n",
+    "  n_grama(p=palabra, n=numero)"
    ]
   },
   {
@@ -89,11 +86,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "25\n[]\n"
+    }
+   ],
+   "source": [
+    "a = [2,2,4,3,7,7,7,8,6,7,3,1,22,2,4,3,7,7,7,8,6,7,3,1,2]\n",
+    "\n",
+    "def nuevalista(repe):\n",
+    "    b = []\n",
+    "    acum = 0\n",
+    "    while acum <= len(a) -1:\n",
+    "        if a[acum] != a[acum]:\n",
+    "            b.append(a[acum])\n",
+    "        else:\n",
+    "            pass\n",
+    "        acum += 1\n",
+    "\n",
+    "nuevalista(repe=a)\n",
+    "print(len(a))\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[2, 4, 3, 7, 8, 6, 1, 22]"
+     },
+     "metadata": {},
+     "execution_count": 20
+    }
+   ],
    "source": [
-    "# Respuesta ejercicio 3"
+    "# Respuesta ejercicio 3\n",
+    "a = [2,2,4,3,7,7,7,8,6,7,3,1,22,2,4,3,7,7,7,8,6,7,3,1,2]\n",
+    "c = []\n",
+    "\n",
+    "def nuevalista2(sindup):\n",
+    "    acum = 0\n",
+    "    while acum <= len(a) -1:\n",
+    "        if a[acum] not in c:\n",
+    "            c.append(a[acum])\n",
+    "        acum += 1\n",
+    "    return c\n",
+    "\n",
+    "nuevalista2(sindup=a)\n",
+    "    "
    ]
   },
   {
@@ -118,11 +175,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Respuesta ejercicio 4"
+    "# Respuesta ejercicio 4\n",
+    "num_dni = 3\n",
+    "let_dni = \"Y\"\n",
+    "tip_ord = False\n",
+    "nada = None\n",
+    "lista_deseo = [\"mate\", \"sunscreen\", \"agua\", \"comida\"]\n",
+    "tupla_ropa = (\"H&M\", \"XXI\", \"RedWing\")\n",
+    "dict_info = {\"nombre\": \"Rochi\", \"edad\" : 41}\n",
+    "flo_hor = float(14.32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista_examen = [num_dni, let_dni, tip_ord, nada,lista_deseo, tupla_ropa, dict_info, flo_hor]\n"
    ]
   },
   {
@@ -157,11 +231,235 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[3,\n 'Y',\n False,\n None,\n ['mate', 'sunscreen', 'agua', 'comida'],\n ('H&M', 'XXI', 'RedWing'),\n {'nombre': 'Rochi', 'edad': 41},\n 14.32]"
+     },
+     "metadata": {},
+     "execution_count": 43
+    }
+   ],
+   "source": [
+    "lista_examen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "sunscreen\n"
+    }
+   ],
+   "source": [
+    "print(lista_examen[4][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "RedWing\n"
+    }
+   ],
+   "source": [
+    "print(lista_examen[5][2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Rochi\n"
+    }
+   ],
+   "source": [
+    "print(lista_examen[6][\"nombre\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "14.32413\n"
+    }
+   ],
+   "source": [
+    "print(str(lista_examen[-1]) + str(lista_examen[6][\"edad\"]) + str(lista_examen[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##Si tenéis más de 20 años, el primer número de vuestro DNI es mayor a 7 y usas Mac, mostrar la posición 5 de lista_examen.\n",
+    "\n",
+    "if (lista_examen[6][\"edad\"])>20 and lista_examen[0]>7 and [2] == False:\n",
+    "    print(lista_examen[5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[3, 'Y', False, None, ['mate', 'sunscreen', 'agua', 'comida'], ('H&M', 'XXI', 'RedWing'), {'nombre': 'Rochi', 'edad': 41}, 14.32]\n"
+    }
+   ],
+   "source": [
+    "# Respuesta ejercicio 5\n",
+    "print(lista_examen)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Respuesta ejercicio 5"
+    "##Apartado 2\n",
+    "##Mostrar por pantalla, con uso de bucles:\n",
+    "\n",
+    "Todos los elementos de lista_examen.\n",
+    "Todos los elementos de lista_deseo desde lista_examen."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "3\nY\nFalse\nNone\n['mate', 'sunscreen', 'agua', 'comida']\n('H&M', 'XXI', 'RedWing')\n{'nombre': 'Rochi', 'edad': 41}\n14.32\n"
+    }
+   ],
+   "source": [
+    "for elem in lista_examen:\n",
+    "    print(elem)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "['mate', 'sunscreen', 'agua', 'comida']\n"
+    }
+   ],
+   "source": [
+    "for elem in lista_examen:\n",
+    "    print(lista_examen[4])\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##Todos los elementos de tupla_ropa seguido de la cadena \"-->\" y la posición (int) que ocupa en la tupla accediendo desde lista_examen. Se aconseja utilizar enumerate.\n",
+    "\n",
+    "##Cada key de dict_info seguido de la cadena \":\" seguido de su value desde lista_examen.\n",
+    "\n",
+    "##Todos los elementos que ocupen una posición menor a 4 en lista_examen."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "('H&M', 'XXI', 'RedWing') -->  5\n"
+    }
+   ],
+   "source": [
+    "for pos, elem in enumerate(lista_examen):\n",
+    "    if elem == lista_examen[5]:\n",
+    "        print(elem, \"--> \", int(pos))\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "nombre: Rochi\nedad: 41\n"
+    }
+   ],
+   "source": [
+    "for key, value in lista_examen[6].items():\n",
+    "    print(f\"{key}: {value}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "3\nY\nFalse\nNone\n"
+    }
+   ],
+   "source": [
+    "for elem in lista_examen[0:4]:\n",
+    "    print(elem)"
    ]
   },
   {
@@ -202,11 +500,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "{0: 'A',\n 1: 'B',\n 2: 'C',\n 3: 'D',\n 4: 'E',\n 5: 'F',\n 6: 'G',\n 7: 'H',\n 8: 'I',\n 9: 'J'}"
+     },
+     "metadata": {},
+     "execution_count": 73
+    }
+   ],
    "source": [
-    "# Respuesta ejercicio 7\n"
+    "# Respuesta ejercicio 7\n",
+    "k = [0,1,2,3,4,5,6,7,8,9]\n",
+    "v = [\"A\", \"B\", \"C\", \"D\", \"E\", \"F\", \"G\", \"H\", \"I\", \"J\"]\n",
+    "\n",
+    "def ej7 (numeros, letras):\n",
+    "    generador = {}\n",
+    "    for x in range(len(k)):\n",
+    "        generador[k[x]] = v[x]\n",
+    "    return generador\n",
+    "\n",
+    "ej7(numeros=k, letras=v)\n"
    ]
   },
   {
@@ -282,7 +599,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Respuesta ejercicio 9"
+    "# Respuesta ejercicio 9\n",
+    "USE "
    ]
   },
   {
