--- a/ProjectsDS/Week3/test/Precurse_Exam.ipynb
+++ b/ProjectsDS/Week3/test/Precurse_Exam.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 195,
    "metadata": {
     "tags": []
    },
@@ -117,10 +117,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 197,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[]\n"
+    }
+   ],
+   "source": [
+    "a = [2,2,4,3,7,7,7,8,6,7,3,1,22,2,4,3,7,7,7,8,6,7,3,1,2]\n",
+    "\n",
+    "def nuevalista(repe):\n",
+    "    b = []\n",
+    "    set(a)\n",
+    "print(b)"
+   ]
   },
   {
    "cell_type": "code",
@@ -480,11 +495,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 192,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Nombre antes del cambio: Wolfram\n23\n173 cm\n"
+    }
+   ],
    "source": [
-    "# Respuesta ejercicio 6"
+    "# Respuesta ejercicio 6\n",
+    "class Humano:\n",
+    "    def __init__(self, edad, altura, nombre):\n",
+    "        \"\"\"Constructor de la clase\"\"\"\n",
+    "        self.edad = edad\n",
+    "        self.altura = altura\n",
+    "        self.nombre = nombre\n",
+    "\n",
+    "    def cumplir_edad(self):\n",
+    "        self.edad += 1\n",
+    "\n",
+    "    def registro_nombre(self):\n",
+    "        self.nombre = nuevo_nombre\n",
+    "\n",
+    "wolfram = Humano(nombre=\"Wolfram\", edad=23, altura=173)\n",
+    "print(\"Nombre antes del cambio:\",wolfram.nombre)\n",
+    "print(wolfram.edad)\n",
+    "print(wolfram.altura, \"cm\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Nuevo nombre: \nBenacio\n"
+    }
+   ],
+   "source": [
+    "wolfram = Humano(nombre=\"Benacio\", edad=23, altura=173)\n",
+    "print(\"Nuevo nombre: \")\n",
+    "print(wolfram.nombre)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Benacio edad: 23\nBenacio edad despues de hoy:\n 24\n"
+    }
+   ],
+   "source": [
+    "wolfram = Humano(nombre=\"Benacio\", edad=23, altura=173)\n",
+    "print(\"Benacio edad:\", wolfram.edad)\n",
+    "wolfram.cumplir_edad()\n",
+    "print(\"Benacio edad despues de hoy:\\n\", wolfram.edad)"
    ]
   },
   {
@@ -600,7 +679,11 @@
    "outputs": [],
    "source": [
     "# Respuesta ejercicio 9\n",
-    "USE "
+    "USE poke_db\n",
+    "SELECT IBAN FROM poke_db.Banco;\n",
+    "WHERE Persona.DNI = Banco.IBAN\n",
+    "\n",
+    "SELECT Persona.Edad >22;\n"
    ]
   },
   {
@@ -618,12 +701,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 226,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "'str' object is not callable",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-226-011914a632d0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mbucle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlista\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-226-011914a632d0>\u001b[0m in \u001b[0;36mbucle\u001b[0;34m(lista)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mbucle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlista\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"PARAR O SEGUIR?\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0macum\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;32mwhile\u001b[0m \u001b[0macum\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlista\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'str' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "# Respuesta ejercicio 10\n",
+    "\n",
+    "def bucle(lista):\n",
+    "    x = input(\"PARAR O SEGUIR?\")\n",
+    "    acum = 0\n",
+    "    while acum < len(lista):\n",
+    "        if x == \"PARAR\":\n",
+    "            break\n",
+    "        else: pass\n",
+    "        acum += 1\n",
+    "    return x\n",
+    "\n",
+    "bucle(lista=range(10))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Respuesta ejercicio 10"
-   ]
+   "source": []
   }
  ],
  "metadata": {
